--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,9 +8,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="LoadingTheme" parent="Theme.AppCompat.NoActionBar" />
+    <style name="WithoutActionBar" parent="Theme.AppCompat.Light.NoActionBar" />
 
     <style name="CircularProgress" parent="Theme.AppCompat.Light">
         <item name="colorAccent">@android:color/white</item>
+    </style>
+
+    <style name="Toolbar" parent="Base.ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:textColorPrimary">#fff</item>
+        <item name="android:background">@color/colorOrangeDark</item>
+        <item name="colorControlNormal">@color/colorOrange</item>
     </style>
 </resources>
