--- a/app/src/main/res/layout/activity_coin.xml
+++ b/app/src/main/res/layout/activity_coin.xml
@@ -55,24 +55,42 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:paddingBottom="8dp"
-                android:paddingTop="8dp">
+                android:layout_height="124dp"
+                android:gravity="center|left"
+                android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="72dp"
-                    android:text="Мой профиль"
-                    android:textColor="#000000"
-                    android:textSize="16sp" />
+                    android:fontFamily="sans-serif"
+                    android:lineSpacingExtra="6sp"
+                    android:paddingLeft="76dp"
+                    android:text="Current course"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="14sp"
+                    android:textStyle="normal" />
 
-            </FrameLayout>
+                <TextView
+                    android:id="@+id/current_course"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:fontFamily="sans-serif"
+                    android:lineSpacingExtra="12sp"
+                    android:paddingLeft="76dp"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="20sp"
+                    android:textStyle="normal"
+                    tools:text="1 BTC = 3 415 $" />
+            </LinearLayout>
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/chart"
+                android:layout_width="match_parent"
+                android:layout_height="500dp" />
 
         </LinearLayout>
-
     </android.support.v4.widget.NestedScrollView>
 </android.support.design.widget.CoordinatorLayout>
