--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorOrange">#ffbc17</color>
     <color name="colorOrangeDark">#f7931a</color>
+    <color name="colorBlack">#000</color>
 </resources>
